frontend-external/gclb-dev/templates/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # It's important to set this to the Internal ingress hostname 
    # If it's not set, the host header will be set to the external name and the internal ingress controller will not be able to route the request
    nginx.ingress.kubernetes.io/upstream-vhost: frontend.sre-demo-microservices.dev.int.dbk.ncr.com
    # If you need to rewrite the path to the internal ingress
    # nginx.ingress.kubernetes.io/rewrite-target: /internalpath/$2
  name: app-external-ingress-frontend-external
spec:
  tls:
  - hosts:
      - frontend-external.sre-demo-microservices.dev.dbk.ncr.com
    secretName: external-domain-cert-frontend-external
  rules:
    - host: frontend-external.sre-demo-microservices.dev.dbk.ncr.com
      http:
        paths:
          - backend:
              service:
                name: internal-app-frontend-external
                port:
                  # This should always be 80 as that's the port the internal ingress controller is listening on
                  number: 80
            # If you need to rewrite the path for the internal ingress, grab the bit you want for use in the nginx.ingress.kubernetes.io/rewrite-target annotation above
            # path: /external/path(/|$)(.*)
            # Or e.g. if you only want to match certain path prefixes
            # path: /special/app/path/
            path: /
            pathType: Prefix
